# sf-pkg

./: .gitignore  LICENSE  README.md
doc/: Doxyfile
doc/dox/: confidenceweightedaveraging.dox  extendedkalmanfilter.dox  kalmanfilter.dox  literature.bib  mainpage.dox  movingaverage.dox  movingmedian.dox  particlefilterSIR.dox  unscentedkalmanfilter.dox  usage_configuration.dox  usage_errors.dox  usage_extendedkalmanfilter.dox  usage_kalmanfilter.dox  usage_movingaverage.dox  usage_package.dox  usage_particlefilterSIR.dox  usage_unscentedkalmanfilter.dox
examples/: confidence-weighted-averaging_1.h  extended-kalman-filter_1.h  extended-kalman-filter_const.h  extended-kalman-filter_nav.h  kalman-filter_1.h  kalman-filter_2.h  kalman-filter_const.h  kalman-filter_onlyAcceleration.h  moving-average_1.h  moving-average_onlyAx.h  moving-median_1.h  particle-filter-sir_1.h  particle-filter-sir_const.h  particle-filter-sir_nav.h  unscented-kalman-filter_1.h  unscented-kalman-filter_const.h  unscented-kalman-filter_nav.h  unscented-kalman-filter_nav2.h  unscented-kalman-filter_nav3.h  unscented-kalman-filter_param_r-phi.h  validationTest_extended-kalman-filter.h  validationTest_unscented-kalman-filter.h
examples/const/: kf_const.h  pf_const.h
examples/navigation/: ekf_nav1.h  ekf_nav1ctrl.h  ekf_nav2.h  ekf_nav2ctrl.h  ekf_nav3.h  ekf_nav3ctrl.h  ekf_nav3red.h  kf_nav1.h  kf_nav1ctrl.h  kf_nav2.h  kf_nav2ctrl.h  kf_nav3.h  kf_nav3ctrl.h  kf_nav3red.h  pf_nav1.h  pf_nav1ctrl.h  pf_nav2.h  pf_nav2ctrl.h  pf_nav3.h  pf_nav3ctrl.h  pf_nav3red.h  ukf_nav1.h  ukf_nav1ctrl.h  ukf_nav2.h  ukf_nav2ctrl.h  ukf_nav3.h  ukf_nav3ctrl.h  ukf_nav3red.h
sf_estimation/: CMakeLists.txt  package.xml
sf_estimation/doc/: Doxyfile
sf_estimation/doc/dox/: extendedkalmanfilter.dox  particlefilterSIR.dox  unscentedkalmanfilter.dox  usage_configuration.dox  usage_extendedkalmanfilter.dox
sf_estimation/include/estimation/: AbstractKalmanFilter.h  AbstractParticleFilter.h  ConfidenceWeightedAveraging.h  EstimatorFactory.h  EstimatorInterface.h  ExtendedKalmanFilter.h  IEstimator.h  ITransformer.h  InputValue.h  MovingAverage.h  MovingMedian.h  Output.h  OutputValue.h  ParticleFilterSIR.h  UnscentedKalmanFilter.h  UnscentedTransform.h  Value.h  methods.h  models.h
sf_estimation/include/probability/: sampling.h
sf_estimation/src/estimation/: AbstractKalmanFilter.cpp  AbstractParticleFilter.cpp  ConfidenceWeightedAveraging.cpp  EstimatorFactory.cpp  ExtendedKalmanFilter.cpp  Input.cpp  InputValue.cpp  KalmanFilter.cpp  MovingAverage.cpp  MovingMedian.cpp  Output.cpp  OutputValue.cpp  ParticleFilterSIR.cpp  UnscentedKalmanFilter.cpp  UnscentedTransform.cpp  Value.cpp
sf_estimation/src/probability/: pdfs.cpp  sampling.cpp
sf_estimation/tests/: utest_ConfidenceWeightedAveraging.cpp  utest_EstimatorFactory.cpp  utest_EstimatorInterface.cpp  utest_ExtendedKalmanFilter.cpp  utest_InputValue.cpp  utest_KalmanFilter.cpp  utest_OutputValue.cpp  utest_ParticleFilterSIR.cpp  utest_UnscentedKalmanFilter.cpp  utest_UnscentedTransform.cpp  utest_log.cpp  utest_main.cpp
sf_filter/: CMakeLists.txt  config.h  package.xml
sf_filter/filter/: CMakeLists.txt
sf_filter/filter/include/configuration/: configuration.h  post_config.h  pre_config.h  validation.h  validation_ConfidenceWeightedAveraging.h  validation_ExtendedKalmanFilter.h  validation_KalmanFilter.h  validation_ParticleFilterSIR.h
sf_filter/filter/src/: sf_filter.cpp
sf_filter/filter/src/configuration/: configuration.cpp
sf_msgs/: CMakeLists.txt  package.xml
sf_single/: CMakeLists.txt  README.md  package.xml
sf_single/cfg/: config.h  kalman-filter_1.cfg  kalman-filter_1.h  moving-average_1.cfg  moving-average_1.h  moving-average_2.h  moving-median_1.cfg  moving-median_1.h  sf_single.cfg
sf_single/doc/: Doxyfile  mainpage.dox
sf_single/doc/dox/: dev_addingmethod.dox  extendedkalmanfilter.dox  kalmanfilter.dox  literature.bib  mainpage.dox  movingaverage.dox  movingmedian.dox  unscentedkalmanfilter.dox  usage_configuration.dox  usage_kalmanfilter.dox  usage_movingmedian.dox  usage_particlefilterSIR.dox
sf_single/examples/: extended-kalman-filter_1.h  kalman-filter_1.h  kalman-filter_2.h  moving-average_1.h  moving-average_2.h  moving-median_1.h  particle-filter-sir_1.h  particle-filter-sir_nav.h  unscented-kalman-filter_1.h  validationTest_extended-kalman-filter.h  validationTest_general.h  validationTest_kalman-filter.h  validationTest_moving-average.h  validationTest_moving-median.h  validationTest_unscented-kalman-filter.h
sf_single/include/: Configurator.h
sf_single/include/configuration/: configuration.h  methods.h  post_config.h  pre_config.h  validation.h  validation_ExtendedKalmanFilter.h  validation_KalmanFilter.h  validation_MovingAverage.h  validation_MovingMedian.h  validation_UnscentedKalmanFilter.h
sf_single/include/estimation/: AbstractKalmanFilter.h  EstimationMethodInterface.h  EstimatorFactory.h  EstimatorInterface.h  ExtendedKalmanFilter.h  IEstimationMethod.h  IEstimator.h  Input.h  InputValue.h  KalmanFilter.h  MovingAverage.h  MovingMedian.h  Output.h  OutputValue.h  ParticleFilterSIR.h  UnscentedKalmanFilter.h  UnscentedTransform.h  methods.h
sf_single/include/probability/: pdfs.h  sampling.h
sf_single/launch/: sf_single.launch  sf_single_cfg-file.launch
sf_single/msg/: OutputEntityStamped.msg
sf_single/src/: Configurator.cpp  sf_single.cpp
sf_single/src/configuration/: configuration.cpp
sf_single/src/estimation/: AbstractKalmanFilter.cpp  EstimatorFactory.cpp  ExtendedKalmanFilter.cpp  IEstimationMethod.cpp  IEstimator.cpp  Input.cpp  InputValue.cpp  KalmanFilter.cpp  MovingAverage.cpp  MovingMedian.cpp  Output.cpp  OutputValue.cpp  ParticleFilterSIR.cpp  UnscentedKalmanFilter.cpp  UnscentedTransform.cpp
sf_single/src/probability/: sampling.cpp
sf_single/tests/: utest_EstimatorFactory.cpp  utest_ExtendedKalmanFilter.cpp  utest_KalmanFilter.cpp  utest_ParticleFilterSIR.cpp  utest_UnscentedKalmanFilter.cpp  utest_UnscentedTransform.cpp  utest_configuration.cpp  utest_pdfs.cpp  utest_sampling.cpp
(+2 files in other folders)
