<?xml version="1.0"?>
<package>
  <name>sf_single</name>
  <version>0.0.2</version>
  <description>The single sensor fusion package</description>

  <maintainer email="denise.ratasich@gmx.at">Denise Ratasich</maintainer>
  <license>BSD</license>
  <author email="denise.ratasich@gmx.at">Denise Ratasich</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <run_depend>roscpp</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>